<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apprenti.uneapplisimple.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/welcome" />

    <CheckBox
        android:text="@string/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="26dp"
        android:id="@+id/checkBox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nom"
        android:ems="10"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:id="@+id/nom" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/prenom"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/prenom"
        android:layout_below="@+id/nom"
        android:layout_alignLeft="@+id/nom"
        android:layout_alignStart="@+id/nom" />

    <Button
        android:text="@string/Valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prenom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:id="@+id/button" />

    <TextView
        android:text="@string/felicitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/felicitation"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />
</RelativeLayout>
